cmake_minimum_required(VERSION 2.8)

ADD_SUBDIRECTORY(external)



PROJECT("quantisd")

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES(${LIBQUANTIS_INCLUDE_DIRECTORIES})

SET(quantisd_SOURCES
	src/main.c
)

ADD_EXECUTABLE(TARGET_quantisd ${quantisd_SOURCES})
TARGET_LINK_LIBRARIES(TARGET_quantisd ${LIBQUANTIS_LIBRARY} ${LIBUSB_LIBRARY} ${LIBQUANTIS_LDFLAGS} ${LIBUSB_LDFLAGS})
ADD_DEPENDENCIES(TARGET_quantisd TARGET_libquantis)

SET_TARGET_PROPERTIES(TARGET_quantisd PROPERTIES OUTPUT_NAME quantisd)
